# soybean_mold_detector

./: README.md
plant_photography_ws/src/d1_arm_control_cpp/: CMakeLists.txt  package.xml
plant_photography_ws/src/d1_arm_control_cpp/config/: arm_config.yaml
plant_photography_ws/src/d1_arm_control_cpp/include/d1_arm_control_cpp/: arm_controller.hpp
plant_photography_ws/src/d1_arm_control_cpp/launch/: arm_node.launch.py
plant_photography_ws/src/d1_arm_control_cpp/src/: arm_control_node.cpp  arm_controller.cpp
plant_photography_ws/src/plant_photography_bringup/: package.xml
plant_photography_ws/src/plant_photography_bringup/launch/: system.launch.py
plant_photography_ws/src/plant_photography_py/: package.xml  setup.py
plant_photography_ws/src/plant_photography_py/config/: detection_config.yaml  navigation_config.yaml
plant_photography_ws/src/plant_photography_py/launch/: python_nodes.launch.py  zed_camera.launch.py
plant_photography_ws/src/plant_photography_py/plant_photography_py/: main_control_node.py  navigation_node.py
