<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>plant_photography_bringup</n>
  <version>0.0.1</version>
  <description>Launch files for plant photography robot</description>
  <maintainer email="johnamiller056@gmail.com">JohnMiller</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>plant_photography_py</exec_depend>
  <exec_depend>d1_arm_control_cpp</exec_depend>
  <exec_depend>unitree_go2_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
